chat/src/App.css
html,
body {
  min-height: 100vh;
  /* height: 90%; */
  width: 100%;
}

.container-fluid {
  min-height: 90vh;
}

.App {
  /* text-align: center; */
  background-color: rgba(37, 40, 41, 0.932);
  min-height: 100vh;
  height: 100%;
}

.App-header {
  background-color: #282c34;
  min-height: 10vh;
  /* height: 10%; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.users {
  color: whitesmoke;
  /* justify-content: left; */
  text-align: center;
  border-right: 0.5px dotted gray;
}

.send-wrapper {
  bottom: 0;
  width: 100%;
  /* min-height: 10vh; */
  height: 20vh;
  /* bottom: 0; */
  position: absolute;
}

.messages-board {
  height: 80vh;
  width: 100%;
}

.board {
  width: 100%;
}

.login {
  text-align: center;
}

.messages-wrapper {
  width: 100%;
  min-height: 90vh;
}

ul.messages-list li {
  word-break: break-all;
  white-space: normal;
  list-style-type: none;
}

ul.users-list {
  margin: 0 !important;
  padding: 0 !important;
}

li {
  list-style-type: none;
}

hr {
  border: 0.5px dotted gray !important;
}

.wrapper {
  width: 100%;
}

.message-sender {
  width: 70%;
  /* border-radius: 15px 0 0 15px; */
  height: 40px;
  font-family: 'Courier New', Courier, monospace;
}

.send-container {
  text-align: center;
}

.toggle-emoji {
  height: 40px;
  border-radius: 15px 0 0 15px;
  color: white;
  background-color: rgba(9, 81, 236, 0.89);
}

.submit-button {
  height: 40px;
  border-radius: 0 15px 15px 0;
  color: white;
  background-color: rgba(9, 81, 236, 0.89);
}

.messages-gauche {
  width: 80%;
  text-align: left;
  /* border-radius: 15px;
  padding: 2px 15px 2px 15px; */
  font-family: 'Courier New', Courier, monospace;
}

.messages-droite {
  width: 85%;
  /* padding: 2px 15px 2px 15px;
  border-radius: 15px; */
  clear: both;
  margin-left: 100px;
  font-family: 'Courier New', Courier, monospace;
}

.ul-container {
  width: 100%;
  height: auto;
  /* margin: 2px 0px 0px 0px; */
  /* bottom: 0; */
  padding: 0 !important;
}

.ul-container > p {
  margin-left: 0 !important;
}

.messages-droite .user-message {
  color: rgb(167, 17, 187);
  margin-left: 30px;
}

.messages-droite .user-chatting {
  color: rgb(221, 218, 23);
}

.user-message {
  margin-left: 30px;
  color: rgb(255, 149, 10);
}

.text-deco {
  color: white;
}

.user-chatting {
  color: rgb(25, 186, 235);
}

.messages {
  position: relative;
  overflow-y: auto;
}

ul.messages-list {
  position: absolute;
}

p {
  margin-bottom: 0 !important;
}

.error {
  color: red;
}

